<resources>
    <string name="app_name">Lab8</string>
    <string name="user_name" />
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photo">Photos</string>
    <string name="nav_movie">Movies </string>
    <string name="nav_notification">Notifications </string>
    <string name="nav_settings">Settings </string>
    <string name="nav_other">Other</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="todo">TODO</string>
    <string name="www_yasar_edu_tr">www.yasar.edu.tr</string>
    <string name="imgr">imgr</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
</resources>