<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_action_photo"
            android:title="@string/nav_photo" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_action_movie"
            android:title="@string/nav_movie" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_action_notification"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />
    </group>

    <item
        android:title="@string/nav_other"
        >
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us"
                />
            <item
                android:id="@+id/nav_privacy_policy"

                android:title="@string/nav_privacy_policy"
                />
        </menu>
    </item>

</menu>